[package]
name = "candid-gen"
version = "0.1.0"
edition = "2021"
description = """
CLI tool that automates the generation of Candid interface files from Rust canisters \
for Internet Computer (IC) projects.
"""
authors = ["cwnt.io", "Gustavo Basso <gubasso@cwnt.io>", "Ismael Pamplona <isma@cwnt.io>"]
license-file = "LICENSE"
# homepage = "https://github.com/cwnt-io/candid-gen"
repository = "https://github.com/cwnt-io/candid-gen"
keywords = ["issue", "tracker", "git", "project", "management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
